build: decouple protobufjs generation deps from main dependencies
We should decouple the protobufjs generation deps from the main
dependencies, allowing us to e.g. update glob to the ESM-supported
version. Currently without this change, the `protobufjs` CLI would
complain if `glob` gets bumped from v4 to v5.

--- a/ng-dev/utils/protos/BUILD.bazel
+++ b/ng-dev/utils/protos/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//tools:generate_ts_proto_module.bzl", "generate_ts_proto_module")
+load("//tools/ts_proto:index.bzl", "generate_ts_proto_module")
 
 generate_ts_proto_module(
     name = "bazel_test_status",
