build: setup tslint to enforce certain esm/cjs interop import rules
Most of the imports will be validated by the new Node module resolution
from TypeScript, but only by consulting the types. This might not be
correct in all cases and the ESM/CJS interop needs special enforcement.

e.g. SemVer does not ship ESM and cannot be imported through named
imports because Node's interop static analysis does not fully understand
the rather complex package. A default import _must_ be used. TSLint will
help us enforce this.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,6 +175,9 @@ jobs:
       - run:
           name: Check commit messages
           command: yarn ng-dev commit-message validate-range << pipeline.git.base_revision >> << pipeline.git.revision >>
+      - run:
+          name: Check code by running linters
+          command: yarn lint
 
   publish_snapshot_build:
     executor: docker-linux-executor
