--- a/tslint-rules/BUILD.bazel
+++ b/tslint-rules/BUILD.bazel
@@ -9,3 +9,9 @@ ts_library(
         "@npm//typescript",
     ],
 )
+
+filegroup(
+    name = "static_files",
+    srcs = ["tsNodeLoaderRule.js"],
+    visibility = ["//:npm"],
+)
