build: use es2020 and ESM for both devmode and prodmode
Similar to how we do it in the COMP repo already, devmode and prodmode
should already use ES2020 and ESM. This is also a nice preparation for
us eventually reworking `ts_library` to strict ESM single-mode.

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "zone.js": "^0.11.4"
   },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.1.0-next.0"
+    "@angular/benchpress/@angular/core": "14.1.0-next.0",
+    "@angular/bazel@14.1.0-next.0": "patch:@angular/bazel@npm:14.1.0-next.0#.yarn/patches/@angular-bazel-npm-14.1.0-next.0-9dd2cc71f8.patch"
   }
 }
