--- a/ng-dev/BUILD.bazel
+++ b/ng-dev/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//tools:defaults.bzl", "esbuild", "ts_library")
+load("//tools:defaults.bzl", "esbuild_esm_bundle", "ts_library")
 load("//bazel:extract_types.bzl", "extract_types")
 
 NG_DEV_EXTERNALS = [
@@ -46,7 +46,7 @@ extract_types(
     deps = [":ng-dev"],
 )
 
-esbuild(
+esbuild_esm_bundle(
     name = "bundles",
     entry_points = [
         "cli.ts",
@@ -57,9 +57,15 @@ esbuild(
         "//ng-dev/pr/merge:strategies/commit-message-filter.ts",
     ],
     external = NG_DEV_EXTERNALS,
-    format = "iife",
+    splitting = True,
     visibility = ["//:npm"],
     deps = [
         ":ng-dev",
     ],
+)
+
+filegroup(
+    name = "static_files",
+    srcs = ["package.json"],
+    visibility = ["//:npm"],
 )
