refactor: rename brotli binary script to explicit `.cjs`
Renames the brotli rule binary script to an explicit `.cjs` extension.
In the Bazel code we are not using ESM yet, so this should be an
explicit `.cjs` file just to make this obvious.

--- a/bazel/benchmark/brotli-cli/BUILD.bazel
+++ b/bazel/benchmark/brotli-cli/BUILD.bazel
@@ -5,9 +5,9 @@ package(default_visibility = ["//visibility:public"])
 nodejs_binary(
     name = "brotli-cli",
     data = [
-        "cli.js",
+        "cli.cjs",
     ],
-    entry_point = ":cli.js",
+    entry_point = ":cli.cjs",
     visibility = ["//visibility:public"],
 )
 
