feat(ng-dev): always require `ts-node` to be available
As part of our ESM change we should avoid the dynamic import and
just use `ts-node` as a normal import. We expect our ng-dev users
to always have their configs written in TS anyway.

--- a/ng-dev/utils/BUILD.bazel
+++ b/ng-dev/utils/BUILD.bazel
@@ -37,6 +37,7 @@ ts_library(
         "@npm//inquirer",
         "@npm//semver",
         "@npm//supports-color",
+        "@npm//ts-node",
         "@npm//typed-graphqlify",
         "@npm//which",
         "@npm//yaml",
