build: enable spec bundling for jasmine tests to work with ESM
This is somewhat similar to how we run ESM tests in the components
repository. We now bundle all specs at build time into a single ESM
file. This ensures the tests run as expected (because the Bazel NodeJS
rules do not fully support ESM yet). Also helps us validating the tool
in a way we also ship it to our users (i.e. bundled).

As part of this change, we also wire up the bootstrap jasmine code that
registers an `beforeEach` call. This keeps the behavior similar to the
jasmine bootstrap logic we had before.

Lastly, this commit resets the ng-dev config between tests as we will
need to use `setConfig` more heavily with ESM (where we cannot simply
spy on the `getConfig` module-exported member).

--- a/bazel/benchmark/app_bundling/test/BUILD.bazel
+++ b/bazel/benchmark/app_bundling/test/BUILD.bazel
@@ -34,7 +34,12 @@ ts_library(
 
 jasmine_node_test(
     name = "test",
-    data = [":bundle.min.js"],
+    data = [
+        ":bundle.min.js",
+        "@npm//jsdom",
+    ],
+    # JSDOM should not be bundled because it has workers and dynamic imports.
+    external = ["jsdom"],
     specs = [
         ":test_lib",
     ],
